Add DOM based XSS

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -26,6 +26,7 @@
                     <a class="nav-item nav-link" id="user" href="/check_hash">Check Hash</a>
                     <a class="nav-item nav-link" id="user" href="/xss-stimulate">Refectec Xss</a>
                     <a class="nav-item nav-link" id="stored-xss" href="/stored-xss/home">Stored Xss</a>
+                    <a class="nav-item nav-link" id="stored-xss" href="/dom-xss/home">DOM Xss</a>
                     <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>     
                 {% else %}
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
