--- a/website/static/css/stored-xss.css
+++ b/website/static/css/stored-xss.css
@@ -6,7 +6,7 @@
 
 .product-card .card-img-top {
     width: 100%; /* Chiều rộng là 100% của phần tử cha (.card) */
-    max-height: 200px; /* Chiều cao tự động để giữ tỷ lệ khung hình */
+    max-height: 180px; /* Chiều cao tự động để giữ tỷ lệ khung hình */
 }
 
 .product-rating {
@@ -22,6 +22,9 @@
     border-radius: 8px;
     overflow: hidden;
     transition: box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
   .product-card:hover {
