--- a/website/templates/stored-xss.html
+++ b/website/templates/stored-xss.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %}
+{% extends "base.html" %} {% block title %}Stored Xss{% endblock %}
 {% block style %}  <link rel="stylesheet" href="{{ url_for('static', filename='css/stored-xss.css') }}"> {% endblock %}
 {% block content %}
 <div class="container text-center my-5">
